--- a/templates/charts.html
+++ b/templates/charts.html
@@ -142,10 +142,10 @@
             </div>
 
             <div>
-                <button type="button" class="btn btn-primary" onclick="cb()">Fetch stock</button>
+                <button type="button" class="btn btn-primary" onclick="cb()">Run Simulations</button>
             </div>
     
-            <div class="col-8">
+            <div class="col-12">
                 <h2 id="Histogram"></h2>
                 <div id="chart" class="chart" style="height: 300px;border: 1px solid; 
                     box-shadow: 5px 5px 5px #888888;">
