--- a/templates/charts.html
+++ b/templates/charts.html
@@ -45,10 +45,19 @@
             <div class="col">
                 <select id="input2" class="form-select" aria-label="Select">
                     <option selected value="0.1">10%</option>
+                    <option value="-0.03">-3%</option>
+                    <option value="-0.02">-2%</option>
+                    <option value="-0.01">-1%</option>
+                    <option value="0.00">0%</option>
+                    <option value="0.01">1%</option>
                     <option value="0.02">2%</option>
+                    <option value="0.03">3%</option>
                     <option value="0.04">4%</option>
+                    <option value="0.05">5%</option>
                     <option value="0.06">6%</option>
+                    <option value="0.07">7%</option>
                     <option value="0.08">8%</option>
+                    <option value="0.09">9%</option>
                     <option value="0.12">12%</option>
                     <option value="0.15">15%</option>
                     <option value="0.20">20%</option>
@@ -60,11 +69,17 @@
             <div class="col"><b>Terminal Growth</b></div>
             <div class="col">
                 <select id="input3" class="form-select" aria-label="Select">
-                    <option selected value="0.1">10%</option>
-                    <option value="0.02">2%</option>
+                    <option selected value="0.02">2%</option>
+                    <option value="-0.03">-3%</option>
+                    <option value="-0.02">-2%</option>
+                    <option value="-0.01">-1%</option>
+                    <option value="0.00">0%</option>
+                    <option value="0.01">1%</option>
+                    <option value="0.03">3%</option>
                     <option value="0.04">4%</option>
                     <option value="0.06">6%</option>
                     <option value="0.08">8%</option>
+                    <option value="0.10">10%</option>
                     <option value="0.12">12%</option>
                     <option value="0.15">15%</option>
                     <option value="0.20">20%</option>
@@ -86,23 +101,32 @@
             <div class="col">
                 <select id="input5" class="form-select" aria-label="Select">
                     <option selected value="0.035">3.5%</option>
+                    <option value="0.000">0.0%</option>
                     <option value="0.001">0.1%</option>
                     <option value="0.0025">0.25%</option>
                     <option value="0.005">0.50%</option>
+                    <option value="0.0075">0.75%</option>
                     <option value="0.01">1%</option>
+                    <option value="0.0125">1.25%</option>
                     <option value="0.015">1.5%</option>
+                    <option value="0.0175">1.75%</option>
                     <option value="0.02">2%</option>
                     <option value="0.025">2.5%</option>
                     <option value="0.03">3%</option>
                     <option value="0.04">4%</option>
                     <option value="0.045">4.5%</option>
-                    <option value="0.005">5%</option>
+                    <option value="0.05">5%</option>
+                    <option value="0.055">5.5%</option>
+                    <option value="0.06">6%</option>
+                    <option value="0.065">6.5%</option>
+                    <option value="0.07">7%</option>
                 </select>
             </div>
                 <div class="col"><b>Beta:</b></div>
                 <div class="col">
                 <select id="input6" class="form-select" aria-label="Select">
                     <option selected value="1.00">1.00</option>
+                    <option value="0.25">0.25</option>
                     <option value="0.50">0.50</option>
                     <option value="0.75">0.75</option>
                     <option value="1.25">1.25</option>
@@ -115,9 +139,11 @@
             <div class="col"><b>Market Rate Return:</b></div>
             <div class="col">
                 <select id="input7" class="form-select" aria-label="Select">
-                    <option selected value="0.075">7.5%</option>
+                    <option selected value="0.07">7%</option>
                     <option value="0.00">0%</option>
+                    <option value="-0.01">-1%</option>
                     <option value="-0.02">-2%</option>
+                    <option value="-0.03">-3%</option>
                     <option value="-0.04">-4%</option>
                     <option value="-0.06">-6%</option>
                     <option value="-0.08">-8%</option>
@@ -126,8 +152,11 @@
                     <option value="-0.12">-12%</option>
                     <option value="-0.15">-15%</option>
                     <option value="-0.20">-20%</option>
+                    <option value="0.01">1%</option>
                     <option value="0.02">2%</option>
+                    <option value="0.03">3%</option>
                     <option value="0.04">4%</option>
+                    <option value="0.05">5%</option>
                     <option value="0.06">6%</option>
                     <option value="0.08">8%</option>
                     <option value="0.09">9%</option>
